Fix user and business sidebar on tablet

--- a/app/assets/stylesheets/user/_users_sidebar.scss
+++ b/app/assets/stylesheets/user/_users_sidebar.scss
@@ -3,6 +3,7 @@
   padding-top: 50px;
   width: 15%;
   height: 100%;
+  min-height: 100vh;
   left: 0px;
   z-index: 300;
 
